# huangyundeng_react

./: .env.example  .gitignore  build.sh  deploy.md  docker-compose-fform-v0.0.12.yml  docker-compose.yml  黄石web页面接口规范.docx
backend/: .gitignore  Dockerfile  README.md  embedding.py  manage.py  pyproject.toml  test.py
backend/src/: config.py  settings.py  urls.py
backend/src/account/: account_service.py  admin.py  models.py  serializers.py  utils.py  views.py
backend/src/account/migrations/: 0001_initial.py  0002_account_avatar_url.py  0003_account_class_name.py  0004_account_mini_id.py  0005_platform.py  0006_fileupload.py  0007_fileupload_platform.py  0008_alter_fileupload_file.py
backend/src/base/: models.py  my_middleware.py  request_defined.py
backend/src/fform/: apps.py  fform_service.py  models.py  serializers.py  views.py
backend/src/fform/migrations/: 0001_initial.py  0002_alter_form_status.py  0003_rename_key_formvalue_column_formvalue_value_file_and_more.py  0004_alter_formfile_key.py  0005_form_audit_time_form_submit_time.py  0006_formfile_save_type_alter_formcolumn_form_interface.py
backend/src/qa/: admin.py  apps.py  models.py  views.py
backend/src/qa/migrations/: 0001_initial.py  0002_qarecord.py  0003_alter_qarecord_match_question.py  0004_hotquestion_platform_qarecord_platform.py  0005_hotquestion_related_questions_and_more.py  0006_alter_hotquestion_related_questions_and_more.py  0007_qarecordfeedback.py  0008_alter_qarecordfeedback_message.py  0009_remove_hotquestion_tag_hotquestion_tags.py  0010_add_tag_view.py
backend/src/utils/: api.py  logger.py
backend/src/utils/wx/: wxauth.py
fform-web/: package-lock.json  package.json  tsconfig.json
frontend/: package-lock.json  package.json  remax.config.js
(+78 files in other folders)
