[tool.poetry]
name = "fangxt"
version = "0.1.0"
description = ""
authors = ["linyh <l@likyh.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
django = "4.2.6"
django-ninja = "0.22.2"
openai = "^1.2.3"
python-dotenv = "1.0.0"
requests = "2.31.0"
mistune = "3.0.2"
langchain = "^0.0.334"
psycopg2-binary = "^2.9.6"
psycopg-binary = "^3.1.9"
qianfan = "^0.1.1"
pandas = "^2.1.2"
openpyxl = "^3.1.2"
beautifulsoup4 = "^4.12.2"
html5lib = "^1.1"
qdrant-client = "^1.6.4"
tiktoken = "^0.5.1"
pymysql = "^1.1.0"
docx2txt = "^0.8"
qiniu = "^7.12.1"

[tool.poetry.group.dev.dependencies]
psycopg2 = "^2.9.6"
psycopg = "^3.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#设置poetry包管理工具的自定义pypi镜像源配置
[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple"
priority = "primary"


[[tool.poetry.source]]
name = "PyPI"
priority = "explicit"

